src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <formula>IF(infer_smart_signal_appdynamics_revenue__c=0,&apos;Tier 4-Unclassified&apos;, 
IF(infer_smart_signal_appdynamics_revenue__c&lt;50000000,&apos;Tier 3-Opportunists&apos;,
IF(infer_smart_signal_appdynamics_revenue__c&lt;=1000000000,&apos;Tier 2-Dependents&apos;,
IF(infer_smart_signal_appdynamics_revenue__c&gt;=1000000000,&apos;Tier 1-Expandables&apos;, 
IF(AnnualRevenue=0,&apos;Tier 4-Unclassified&apos;, 
IF(AnnualRevenue&lt;50000000,&apos;Tier 3-Opportunists&apos;, 
IF(AnnualRevenue&lt;=1000000000,&apos;Tier 2-Dependents&apos;, 
IF(AnnualRevenue&gt;1000000000,&apos;Tier 1-Expandables&apos;,&apos;Tier 4-Unclassified&apos; 
))))))))</formula>
        <label>Sales Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_Increment_Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Score Increment Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Self_Service_Pro_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Service Pro Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Service_Product__c</fullName>
        <label>Self-Service Product</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node.js</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>West Coast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Gov.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eastern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Lead_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Show Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Name__c</fullName>
        <label>Trade Show Name</label>
        <picklist>
            <picklistValues>
                <fullName>ApacheCon 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basta! .NET 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BbWorld 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta .net UG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAMP IT 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cassandra Summit 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cedar Rapids .NET UG 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Iowa Software Symposium 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Connect 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Connect 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Connect 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DevConnections (.NET) 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DevConnections 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devoxx 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educause 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOSE 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Game Developers Conference 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gartner Data Conf 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston .Net User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houston TechFest 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa .NET User Group 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaOne 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaOne 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAX 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAX London 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAX SJ 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jazoon Zurich, Switzerland 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JBoss 2011</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Trade_Show_or_User_Group__c</fullName>
        <label>Trade Show or User Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerLeadAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Lead Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_Check_First_Visit__c</fullName>
        <label>Version Check First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Check_Last_Visit__c</fullName>
        <label>Version Check Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Check__c</fullName>
        <description>Used for the report for the weekly versioncheck hits</description>
        <label>Version Check</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdraw_Reason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer with Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAMmy data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not suitable for AppDynamics sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Competitive Solution Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Immediate Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couldn&apos;t Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate Contact Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing AppD Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Technology Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already In Active Opp Cycle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Converted_to_Opp__c</fullName>
        <description>True if this lead was converted into an opportunity.</description>
        <formula>NOT(ISBLANK(ConvertedOpportunityId))</formula>
        <inlineHelpText>True if this lead was converted into an opportunity.</inlineHelpText>
        <label>Infer: Converted to Opp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Good_Lead__c</fullName>
        <description>True if this lead has a &quot;Good&quot; Infer Score. You can set the threshold for what &quot;Good&quot; means by going to Settings | Installed Packages, and click Configure by the Infer package.</description>
        <formula>IF(NOT(ISBLANK(infer2__Infer_Score__c)) &amp;&amp; infer2__Infer_Score__c &gt;= $Setup.infer2__Infer_Scoring_Settings__c.infer2__Good_Threshold__c, TRUE, FALSE)</formula>
        <inlineHelpText>True if this lead has a &quot;Good&quot; Infer Score.</inlineHelpText>
        <label>Infer: Good Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Is_Open__c</fullName>
        <description>True if this lead is &quot;open&quot;. You can configure what lead statuses are considered &quot;open&quot; by going to Setup | Installed Packages, and click Configure next to the Infer package.</description>
        <formula>NOT(IsConverted) &amp;&amp; CONTAINS($Setup.infer2__Infer_Scoring_Settings__c.infer2__Open_Statuses__c, &apos;$^$&apos; + TEXT(Status) + &apos;$_$&apos;)</formula>
        <inlineHelpText>True if this lead is in an &quot;open&quot; status.</inlineHelpText>
        <label>Infer: Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Lead_Age__c</fullName>
        <description>Number of days since this lead was created.</description>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <inlineHelpText>Number of days since this lead was created.</inlineHelpText>
        <label>Infer: Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Lead_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Infer: Lead Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Rating__c</fullName>
        <formula>infer2__Infer_Score_ID__r.infer2__Rating__c</formula>
        <label>Infer: Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Score_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer: Score ID</label>
        <referenceTo>infer2__Infer_Entity_Score__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Score__c</fullName>
        <formula>infer2__Infer_Score_ID__r.infer2__Score__c</formula>
        <label>Infer: Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer_signals__Infer_Smart_Signals_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Smart Signals Record</label>
        <referenceTo>infer_signals__Infer_Smart_Signals_Record__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_appdynamics_revenue__c</fullName>
        <formula>IF(ISNUMBER(infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_32__c), VALUE(infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_32__c), NULL)</formula>
        <label>Infer: Revenue (for AppDynamics)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>is_CIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Persona field to determine whether the Lead is a CIO</description>
        <label>is CIO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Persona field to determine whether a Lead is a mobile-related contact for marketing purposes</description>
        <label>is Mobile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Added_from_Data_com__c</fullName>
        <formula>IF( OR(CONTAINS(TEXT(LeadSource) , &quot;Data.com&quot;), CONTAINS(TEXT(LeadSource) , &quot;Jigsaw&quot;)), &quot;Added from Data.com&quot;, &quot;Other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_do_not_auto_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents automated Clean jobs from auto-filling fields with the matched Data.com record&apos;s values.</description>
        <inlineHelpText>Exclude this record from automated field updates from Data.com Clean jobs</inlineHelpText>
        <label>Data.com Does Not Auto-Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_managed__c</fullName>
        <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, 1, 0)</formula>
        <label>Data.com Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Imported_from_Jigsaw__c</fullName>
        <description>Records were added from the Data.com tab. Contacts &amp; Leads are sourced from Jigsaw and Accounts are generally sourced from D&amp;B.</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com DEPRECATED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE($Label.mkto_si__Marketo_Logo_16,$Label.mkto_si__View_In_Marketo))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AK2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Lite_User__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>Leap Cricket,Firehost,hosting.com,viawest,Critigen,FusionStorm,Convergys</value>
        </filters>
        <filters>
            <field>LEAD.TITLE</field>
            <operation>notEqual</operation>
        </filters>
        <label>AK2</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AK3</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>Lite_User__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>Teradata,teletech,trizetto,information handling services,cerner</value>
        </filters>
        <filters>
            <field>LEAD.TITLE</field>
            <operation>notEqual</operation>
        </filters>
        <label>AK3</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AK4</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>Lite_User__c</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>contains</operation>
            <value>Cap Gemini,Dell Services,Deloitte,L&amp;T Infotech</value>
        </filters>
        <filters>
            <field>LEAD.TITLE</field>
            <operation>notEqual</operation>
        </filters>
        <label>AK4</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ALL_My_Leads_Pending</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>mkto_si__Priority__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
        <columns>Lead_Source_Detail__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified Forever</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Recycled</value>
        </filters>
        <label>ALL My Leads Pending</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_Darcy_Webb_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>contains</operation>
            <value>Pending,Open,Attempting Contact,Working</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>Dwebb</value>
        </filters>
        <label>Darcy Webb Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_Scott_Leggett_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Type__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Recycled,Unqualified Forever</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>slegg</value>
        </filters>
        <label>ANZ Scott Leggett Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Activate_NZ_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>mlowe,rjame</value>
        </filters>
        <label>Activate NZ Leads</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Al_Tier_Opens</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Source__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Type__c</columns>
        <columns>Last_Marketing_Campaign__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>tier</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open,Attempting Contact,Working</value>
        </filters>
        <label>Al Tier Opens</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alec_s_Self_Service_Pro_Public</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Corp_HQ_Phone__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Self_Service_Pro_Trial__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified,Bad Data</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>short,reksten</value>
        </filters>
        <label>Alec&apos;s Self-Service Pro Public</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alec_s_Self_Service_Pro_Public_TR</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Desc__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Self_Service_Pro_Trial__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified,Bad Data</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>short,reksten</value>
        </filters>
        <label>Alec&apos;s Self-Service Pro Public -TR</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Leads3</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>kloster</value>
        </filters>
        <label>All Leads -</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>